# IDL-CatanRL

./: .gitignore  CatanBaselineRL.ipynb  IDL Midterm Report.md  IDL Project Proposal.md  README.md  catan_rl_weighted.ipynb  feature_order.txt  pyproject.toml  requirements.txt
catan_tb/PPO_1/: events.out.tfevents.1773262410.Arjuns-MacBook-Pro-5.local.5746.0
catan_tb/PPO_2/: events.out.tfevents.1773263576.Arjuns-MacBook-Pro-5.local.5948.0
catan_tb/PPO_3/: events.out.tfevents.1773263896.Arjuns-MacBook-Pro-5.local.6019.0
catan_tb/PPO_4/: events.out.tfevents.1773268374.Arjuns-MacBook-Pro-5.local.6019.1
catan_tb/PPO_5/: events.out.tfevents.1773268745.Arjuns-MacBook-Pro-5.local.6316.0
catan_tb/PPO_6/: events.out.tfevents.1773276876.Arjuns-MacBook-Pro-5.local.7234.0
catanrl/: __main__.py  callbacks.py  config.py  env_utils.py  evaluate.py  models.py  ppo_player.py  reward.py  self_play.py  train.py
catanrl/catanatron_ext/: __init__.py  features.py  minimax.py  (+2 more)
charts/: make_charts.py
configs/: advanced_curriculum.yaml  alpha_beta_self_play.yaml  base.yaml  curriculum_4p.yaml  gnn_pbrs_4p.yaml  gnn_resume_stage3.yaml  parallel_recovery.yaml  pbrs_1v1_alphabeta.yaml  pbrs_4p_weighted.yaml  recovery_curriculum.yaml  self_play_4p.yaml  sparse_4p_weighted.yaml  vp_stage3.yaml  vp_vs_valuefn.yaml
notebooks/: colab_runner.ipynb
report/: report.aux  report.out  report.tex
scratch/: inspect_model.py  test_encoder.py
scripts/: debug_obs_shape.py  modal_eval_snapshot.py  modal_train.py  plot_ablations.py  plot_vp_ablation.py  pretrain_value_head.py  run_ablations.sh
(+5 files in other folders)
