[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "catanrl"
version = "0.1.0"
description = "RL agent for Settlers of Catan with PBRS reward shaping"
requires-python = ">=3.10"
dependencies = [
    "catanatron>=3.2.1",
    "catanatron_gym>=4.0.0",
    "sb3-contrib>=2.2.1",
    "stable-baselines3>=2.2.1",
    "gymnasium>=0.29.1",
    "torch>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tensorboard>=2.14.0",
]

[tool.setuptools.packages.find]
include = ["catanrl*"]
